@@ -1,5 +1,7 @@
 2022-01-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Handle malformed database lines (closes: #122)
+	* Always add size attribute to database if growing size group
+	  is set (closes: #121)
 
 2021-12-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Improve error message during config parsing (closes: #119)
